2011-05-24  Rob Buis  <rbuis@rim.com>

        Rubber-stamped by Dirk Schulze.

        Remove requiresLayer inlines, already provided by RenderSVGModelObject.

        * rendering/svg/RenderSVGHiddenContainer.h:
        (WebCore::RenderSVGHiddenContainer::isSVGHiddenContainer):
        * rendering/svg/RenderSVGImage.h:

2011-05-24  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed, build fix.

        Remove platform layering violation: TextRun stores RenderObjects for SVG Fonts support
        https://bugs.webkit.org/show_bug.cgi?id=60254

        Forgot to rename the destructor.

        * platform/graphics/SimpleFontData.h:
        (WebCore::SimpleFontData::AdditionalFontData::~AdditionalFontData):

2011-05-24  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed, build fix.

        Remove platform layering violation: TextRun stores RenderObjects for SVG Fonts support
        https://bugs.webkit.org/show_bug.cgi?id=60254

        Rename SimpleFontData::FontData subclass to AdditionalFontData, to avoid clashes with the WebCore::FontData class, which breaks the win build.

        * platform/graphics/SimpleFontData.cpp:
        (WebCore::SimpleFontData::SimpleFontData):
        * platform/graphics/SimpleFontData.h:
        (WebCore::SimpleFontData::fontData):
        * svg/SVGFontData.h:

2011-05-24  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Antti Koivisto.

        Remove platform layering violation: TextRun stores RenderObjects for SVG Fonts support
        https://bugs.webkit.org/show_bug.cgi?id=60254

        First part:
        Remove a long-standing layering violation in TextRun: it stores RenderObject/RenderSVGResource pointers for SVG Fonts support.
        Replace the two Render* pointers with a single RefPtr<AbstractRenderingContext>. AbstractRenderingContext is a helper class,